@@ -20,105 +20,127 @@
 # - 2015-05-09: debug target to just run minicom.
 # - 2015-05-09: Saving of debug logs in separate files under LOG_DIR.
 # - 2015-10-07: Cleanup and split into multiply files.
+# - 2015-10-09: Add the -L switch to SDK_LIBDIR when generated.
+# - 2015-10-09: Removed archive generation step.
+# - 2015-10-09: Lots of comments.
 
+# Initial Compiler flags.
 ESP_CFLAGS =
 
-#Include project configuration.
+# Include project configuration.
 include mk/config.mk
-#Include OS specific configuration.
+# Include OS specific configuration.
 include mk/$(BUILD_OS).mk
 
+### Compiler and linker configuration. ###
 # Compile flags.
 ESP_CFLAGS += -O2 -std=c99 -Wall -Wl,-EL -fno-inline-functions -nostdlib -mlongcalls -mtext-section-literals -DDB_ESP8266 -D__ets__ -DICACHE_FLASH
-
 # Linker flags used to generate the main object file
 ESP_LDFLAGS	= -nostdlib -Wl,--no-check-sections -u call_user_start -Wl,-static
-
 # Linker script used for the above linker step.
 ESP_LD_SCRIPT	= eagle.app.v6.ld
 
-# Various paths from the SDK used in this project
+### SDK directories used to build the firmware. ###
+# Library directory.
 SDK_LIBDIR	= lib
+# Linker scripts directory.
 SDK_LDDIR	= ld
+# Include file directories.
 SDK_INCDIR	= include include/json
 
-# We create two different files for uploading into the flash
-# These are the names and addresses of these.
-FW_FILE_1_ADDR	= 0x00000
-FW_FILE_2_ADDR	= 0x40000
+### Firmware image configuration. ###
+# These two files contain the actual program code.
+# Flash address and file name of firmware RAM code.
+FW_FILE_1_ADDR := 0x00000
 FW_FILE_1 := $(addprefix $(FW_BASE)/,$(FW_FILE_1_ADDR).bin)
+# Flash address and file name of firmware ROM code.
+FW_FILE_2_ADDR := 0x40000
 FW_FILE_2 := $(addprefix $(FW_BASE)/,$(FW_FILE_2_ADDR).bin)
 
-####
-#### no user configurable options below here
-####
-SRC_DIR		 := $(MODULES)
-BUILD_DIR	 := $(addprefix $(BUILD_BASE)/,$(MODULES))
+### Internal paths. Should not need modification. ### 
+SRC_DIR := $(MODULES)
+# Add build path to module paths, to generate all object files in BUILD_BASE.
+BUILD_DIR := $(addprefix $(BUILD_BASE)/,$(MODULES))
 
-SDK_LIBDIR	 := $(addprefix $(SDK_BASE)/,$(SDK_LIBDIR))
-SDK_INCDIR	 := $(addprefix -I$(SDK_BASE)/,$(SDK_INCDIR))
+# Add the SDK base path to generate include and lib flags.
+SDK_LIBDIR := $(addprefix -L$(SDK_BASE)/,$(SDK_LIBDIR))
+SDK_INCDIR := $(addprefix -I$(SDK_BASE)/,$(SDK_INCDIR))
 
-SRC			 := $(foreach sdir,$(SRC_DIR),$(wildcard $(sdir)/*.c))
-OBJ			 := $(patsubst %.c,$(BUILD_BASE)/%.o,$(SRC))
-LIBS		 := $(addprefix -l,$(LIBS))
-APP_AR		 := $(addprefix $(BUILD_BASE)/,$(TARGET)_app.a)
-TARGET_OUT	 := $(addprefix $(BUILD_BASE)/,$(TARGET).out)
-FS_FILES	 := $(shell find $(FS_DIR) -type f -name '*')
-
-ESP_LD_SCRIPT		:= $(addprefix -T$(SDK_BASE)/$(SDK_LDDIR)/,$(ESP_LD_SCRIPT))
-
-INCDIR			:= $(addprefix -I,$(SRC_DIR))
-EXTRA_INCDIR	:= $(addprefix -I,$(EXTRA_INCDIR))
-MODULE_INCDIR	:= $(addsuffix /include,$(INCDIR))
+# Find all source files.
+SRC	:= $(foreach sdir,$(SRC_DIR),$(wildcard $(sdir)/*.c))
+# Generate object file names from source file names.
+OBJ	:= $(patsubst %.c,$(BUILD_BASE)/%.o,$(SRC))
+# Add -l prefix to generate link flags.
+LIBS := $(addprefix -l,$(LIBS))
+# Add build base directory to target name.
+TARGET := $(addprefix $(BUILD_BASE)/,$(TARGET))
+# Generate a list of all files to be included in the flash file system.
+FS_FILES := $(shell find $(FS_DIR) -type f -name '*')
+# Add path and flag to generate linker flags.
+ESP_LD_SCRIPT := $(addprefix -T$(SDK_BASE)/$(SDK_LDDIR)/,$(ESP_LD_SCRIPT))
+# Look for include files in module directories
+INCDIR := $(addprefix -I,$(SRC_DIR))
+# Generate compiler flags from EXTRA_INCDIR.
+EXTRA_INCDIR := $(addprefix -I,$(EXTRA_INCDIR))
+# Look for include files under /include in each module.
+MODULE_INCDIR := $(addsuffix /include,$(INCDIR))
 
 ### File system variables. ###
 # Get size of the file system image
 FS_SIZE = $(shell printf '%d\n' $$($(FILESIZE) $(FW_FILE_FS) ))
 
 # File system image flash location, just after the code.
-FS_START_OFFSET = $(shell printf '0x%X\n' $$(( ($$($(FILESIZE) $(FW_FILE_1)) + 0x4000) & (0xFFFFC000) )) )
+FS_FILE_ADDR = $(shell printf '0x%X\n' $$(( ($$($(FILESIZE) $(FW_FILE_1)) + 0x4000) & (0xFFFFC000) )) )
 # File system highest address.
 FS_END = 0x2E000
 # Maximum image size.
 FS_MAX_SIZE = $(shell printf '%d\n' $$(($(FS_END) - $(FS_START_OFFSET) - 1)))
-#File system image file name.
-FW_FILE_FS = $(FW_BASE)/$(FS_START_OFFSET).fs
+# File system image file name and path.
+FW_FILE_FS = $(FW_BASE)/$(FS_FILE_ADDR).fs
 
 ### Config flash variables. ###
+# Address to flash configuration data.
 FW_FILE_CONFIG_ADDR := 0x3C000
-FW_FILE_CONFIG := $(addprefix $(FW_BASE)/,$(FW_FILE_CONFIG_ADDR).bin)
+# File name of the configuration data.
+FW_FILE_CONFIG := $(addprefix $(FW_BASE)/,$(FW_FILE_CONFIG_ADDR).cfg)
 
 ### Exports for sub-make. ###
 export DEBUG
 export PROJECT_NAME
 export ESP_CONFIG_SIG
 
+### Targets. ###
+
+# Look in module dirs for *.c and *.h files.
 vpath %.c $(SRC_DIR)
 vpath %.h $(SRC_DIR)
 
+# Define a compile template for the call function.
 define compile-objects
 $1/%.o: %.c
 	$(CC) $(INCDIR) $(MODULE_INCDIR) $(EXTRA_INCDIR) $(SDK_INCDIR) $(ESP_CFLAGS) -MD -Wa,-ahls=$(basename $$@).lst -c $$< -o $$@
 endef
 
+# Run these without checking if there up to date.
 .PHONY: all checkdirs flash flashblank clean debug debugflash docs flashfs flashconfig
 
+# Generate firmware.
 all: checkdirs $(FW_FILE_1) $(FW_FILE_2) $(FW_FILE_FS) $(FW_FILE_CONFIG)
-	@./$(TOOLS_DIR)/mem_usage.sh $(TARGET_OUT) 81920
-	$(ECHO) File system start offset: $(FS_START_OFFSET)
+	@./$(TOOLS_DIR)/mem_usage.sh $(TARGET) 81920
+	$(ECHO) File system start offset: $(FS_FILE_ADDR)
 	$(ECHO) File system end offset: $(FS_END)
 	$(ECHO) File system size: $(FS_SIZE)
 	$(ECHO) File system maximum size: $(FS_MAX_SIZE)
+
+# Generate the firmware image from the final ELF file.
+$(FW_BASE)/%.bin: $(TARGET) | $(FW_BASE)
+	$(ESPTOOL) elf2image -o $(FW_BASE)/ $(TARGET)
+
+# Link the target ELF file.
+$(TARGET): $(OBJ)
+	$(LD) $(SDK_LIBDIR) $(ESP_LD_SCRIPT) $(ESP_LDFLAGS) -Wl,--start-group $(LIBS) $(OBJ) -Wl,--end-group,-Map,$(basename $@).map -o $@
 	
-$(FW_BASE)/%.bin: $(TARGET_OUT) | $(FW_BASE)
-	$(ESPTOOL) elf2image -o $(FW_BASE)/ $(TARGET_OUT)
-
-$(TARGET_OUT): $(APP_AR)
-	$(LD) -L$(SDK_LIBDIR) $(ESP_LD_SCRIPT) $(ESP_LDFLAGS) -Wl,--start-group $(LIBS) $(APP_AR) -Wl,--end-group,-Map,$(basename $@).map -o $@
-
-$(APP_AR): $(OBJ)
-	$(AR) cru $@ $^
-
+#### Create directories. ####
 checkdirs: $(BUILD_DIR) $(FW_BASE) $(LOG_DIR) $(TOOLS_DIR)
 
 $(BUILD_DIR):
@@ -132,63 +154,70 @@ $(LOG_DIR):
 
 $(TOOLS_DIR):
 	$(MKDIR) $@
-	
+
+#### Generic flashing. ####
+#Flash everything.
 flash: all 
 	./$(TOOLS_DIR)/testsize.sh $(FW_FILE_FS) $(FS_MAX_SIZE)
-	$(ESPTOOL) --port $(ESPPORT) -b $(ESPSPEED) write_flash $(FW_FILE_1_ADDR) $(FW_FILE_1) $(FW_FILE_CONFIG_ADDR) $(FW_FILE_CONFIG) $(FW_FILE_2_ADDR) $(FW_FILE_2) $(FS_START_OFFSET) $(FW_FILE_FS)
-	
+	$(ESPTOOL) --port $(ESPPORT) -b $(ESPSPEED) write_flash $(FW_FILE_1_ADDR) $(FW_FILE_1) $(FW_FILE_CONFIG_ADDR) $(FW_FILE_CONFIG) $(FW_FILE_2_ADDR) $(FW_FILE_2) $(FS_FILE_ADDR) $(FW_FILE_FS)
+
+#Flash empty configuration values for the SDK.
 flashblank:
 	$(ESPTOOL) --port $(ESPPORT) -b $(ESPSPEED) write_flash 0x7E000 bin/blank.bin
 
+#### An end to the tears, and the in between years, and the troubles I've seen. ####
 clean:
 	$(RM) -R $(FW_BASE) $(BUILD_BASE)
 	$(MAKE) -C tools/dbffs-tools clean
 	$(MAKE) PROJECT_NAME=$(PROJECT_NAME) ESP_CONFIG_SIG=$(ESP_CONFIG_SIG) -C tools/esp-config-tools clean
 
-debug: $(LOG_DIR)
-#Remove the old log
-	> ./debug.log
-	minicom -D $(ESPPORT) -o -b $(BAUD_RATE) -C ./debug.log
-#Make a copy of the new log before with a saner name.
-	cp ./debug.log $(LOG_DIR)/debug-$(shell date +%Y-%m-%d-%H-%M-%S).log
-
+# Flash and start debugging.
 debugflash: flash debug
 
-### Documentation stuff. ###
-
+#### Documentation stuff. ####
+# Generate docs.
 docs: doxygen
 
+# Generate doxygen API docs.
 doxygen: .doxyfile
 	doxygen .doxyfile
 	$(MAKE) -C tools/dbffs-tools/
 
-### Flash file system stuff. ###
-
+#### Flash file system stuff. ####
+# Build the file system tools.
 .PHONY: $(FS_CREATE)
 $(FS_CREATE):
 	$(MAKE) -C tools/dbffs-tools all install
 
+# Build the file system image.
 $(FW_FILE_FS): $(FS_FILES) $(FS_CREATE)
 	$(DBFFS_CREATE) $(FS_DIR) $(FW_FILE_FS)
-	
+
+# Flash file system.	
 flashfs: $(FW_FILE_FS)
 	tools/testsize.sh $(FW_FILE_FS) $(FS_MAX_SIZE)
 	$(ESPTOOL) --port $(ESPPORT) -b $(ESPSPEED) write_flash $(FS_START_OFFSET) $(FW_FILE_FS)
 
-### ESP firmware binary configuration stuff. ###
-
+#### ESP firmware binary configuration stuff. ####
+# Build the configuration tools.
 .PHONY: $(GEN_CONFIG)
 $(GEN_CONFIG):
 	$(MAKE) -C tools/esp-config-tools all install
 
+# Generate configuration data.
 $(FW_FILE_CONFIG): $(GEN_CONFIG) $(FW_FILE_1) $(FW_FILE_2)
-	$(GEN_CONFIG) $(FW_FILE_CONFIG) $(FS_START_OFFSET)
-	
+	$(GEN_CONFIG) $(FW_FILE_CONFIG) $(FS_FILE_ADDR)
+
+# Flash configuration data.
 flashconfig: $(FW_FILE_CONFIG)
 	tools/testsize.sh $(FW_FILE_CONFIG) 4096
 	$(ESPTOOL) --port $(ESPPORT) -b $(ESPSPEED) write_flash $(FW_FILE_CONFIG_ADDR) $(FW_FILE_CONFIG)
 
+# Thought I would never grok this, but it is quite simple.
+# For each BUILD_DIR use eval to generate, and parse, a rule from the 
+# earlier defined compile-objects template substituting $1, in the
+# template, with the current BUILD_DIR.
 $(foreach bdir,$(BUILD_DIR),$(eval $(call compile-objects,$(bdir))))
 
-#Include .d files with targets and dependencies.
+# Include gcc generated .d files with targets and dependencies.
 -include $(patsubst %.c,$(BUILD_BASE)/%.d,$(SRC))
